src/objects/Business_Conference__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Meetings__c</fullName>
        <description>Total number of accepted meetings</description>
        <inlineHelpText>Total number of accepted meetings</inlineHelpText>
        <label>Accepted Meetings</label>
        <summaryFilterItems>
            <field>Meeting__c.Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Meeting__c.BusinessConference__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Record that shows campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Networking Tracks</relationshipLabel>
        <relationshipName>Networking_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Networking track end date &amp; time</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventtiaID__c</fullName>
        <description>The Eventtia meeting ID number.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Eventtia meeting ID number.</inlineHelpText>
        <label>Eventtia ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Duration__c</fullName>
        <description>Duration of meetings</description>
        <label>Meeting Duration</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Networking_Track_Location__c</fullName>
        <description>Location of networking track</description>
        <inlineHelpText>Location of networking track</inlineHelpText>
        <label>Networking Track Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Meetings__c</fullName>
        <description>Total number of rejected meetings</description>
        <inlineHelpText>Total number of rejected meetings</inlineHelpText>
        <label>Rejected Meetings</label>
        <summaryFilterItems>
            <field>Meeting__c.Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Meeting__c.BusinessConference__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requested_Meetings__c</fullName>
        <description>Total number of requested meetings</description>
        <inlineHelpText>Total number of requested meetings</inlineHelpText>
        <label>Requested Meetings</label>
        <summaryFilterItems>
            <field>Meeting__c.Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </summaryFilterItems>
        <summaryForeignKey>Meeting__c.BusinessConference__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Networking Track start date &amp; time</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Networking Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Networking_Track_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Networking Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Networking Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>